--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -97,7 +97,7 @@
     <div class="container container--crypto">
       <div class="crypto__flex">
         <h1>A cryptobank for everyone</h1>
-        <p>In 8 years’ time, the crypto-economy will exceed 1и trillion dollars. Cryptobanks will become a cornerstone in the relations between decentralized economy and future daily</p>
+        <p>In 8 years’ time, the crypto-economy will exceed 1 trillion dollars. Cryptobanks will become a cornerstone in the relations between decentralized economy and future daily</p>
         <a href="templates/registration.html">Create Account</a>
       </div>
     </div>
@@ -106,7 +106,7 @@
     <div class="container container--trading">
       <div class="trading__flex">
         <h2>NO EXPERIENCE?</h2>
-        <p>You have no worries. Are you thinking of venturing into the world of cryptocurrency trading? Plus500Crypto has you covered; Sign up today and get a demo account. A demo account will prepare and teach you what to expect in the real market. We also have already prepared educational tool from top professionals to enhance your knowledge about trading. 
+        <p>You have no worries. Are you thinking of venturing into the world of cryptocurrency trading? Plus500Crypto has you covered; So sign up today and get a demo account. A demo account will prepare and teach you what to expect in the real market. We also have already prepared educational tool from top professionals to enhance your knowledge about trading. 
 </p>
       </div>
     </div>
