--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -58,6 +58,34 @@
       </div>
     </div>
   </section>
+  <section class="online">
+    <div class="container">
+      <h2>Trade Online With Forex24 Global</h2>
+      <p>We provide a complete set of investment services – all tailored to your trading success</p>
+      <div class="online__flex">
+        <div class="online__box">
+          <b>Invest with the best!</b>
+          <p>Discover and copy the top traders<br>from all over the world</p>
+          <a href="#">Read More</a>
+        </div>
+        <div class="online__box">
+          <b>Invest with the best!</b>
+          <p>Discover and copy the top traders<br>from all over the world</p>
+          <a href="#">Read More</a>
+        </div>
+        <div class="online__box">
+          <b>Invest with the best!</b>
+          <p>Discover and copy the top traders<br>from all over the world</p>
+          <a href="#">Read More</a>
+        </div>
+        <div class="online__box">
+          <b>Invest with the best!</b>
+          <p>Discover and copy the top traders<br>from all over the world</p>
+          <a href="#">Read More</a>
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="js/jquery.min.js"></script>
   <script src="js/slick/slick.min.js"></script>
   <script src="js/script.js"></script>
