--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -190,3 +190,24 @@ body {
 .slick-dots li.slick-active button:before {
   background: #eeba1d;
   opacity: 1; }
+
+.online h2 {
+  margin-top: 115px;
+  margin-bottom: 20px;
+  font-size: 35px;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase; }
+
+.online p {
+  text-align: center;
+  text-transform: uppercase;
+  opacity: 0.7; }
+
+.online__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
