--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -63,7 +63,7 @@
       <h2>Trade Online With Forex24 Global</h2>
       <p>We provide a complete set of investment services – all tailored to your trading success</p>
       <div class="online__flex">
-        <div class="online__box">
+        <div class="online__box  online__box--zulu">
           <b>Invest with the best!</b>
           <p>Discover and copy the top traders<br>from all over the world</p>
           <a href="#">Read More</a>
@@ -84,6 +84,19 @@
           <a href="#">Read More</a>
         </div>
       </div>
+    </div>
+  </section>
+  <section class="global">
+    <div class="container">
+      <h2>Go Global</h2>
+      <p>Capital Markets & Investment Banking</p>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <a href="#"></a>
     </div>
   </section>
   <script src="js/jquery.min.js"></script>
