--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -91,12 +91,12 @@
       <h2>Go Global</h2>
       <p>Capital Markets & Investment Banking</p>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Multiple strategies</li>
+        <li>Corporate Banking & Risk Management</li>
+        <li>Precious Metal Trading & Warehousing</li>
+        <li>Real time insights</li>
       </ul>
-      <a href="#"></a>
+      <a href="#">START TRADING NOW</a>
     </div>
   </section>
   <script src="js/jquery.min.js"></script>
