--- a/assets/templates/forex/sass/blocks/page-header.scss
+++ b/assets/templates/forex/sass/blocks/page-header.scss
@@ -1,6 +1,7 @@
 .page-header__flex {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .page-header__menu {
@@ -12,7 +13,7 @@
 }
 
 .page-header__user-menu {
-  align-self: center;
+  // align-self: center;
 }
 
 .page-header__item {
