--- a/assets/templates/forex/sass/blocks/slider.scss
+++ b/assets/templates/forex/sass/blocks/slider.scss
@@ -10,7 +10,7 @@
     color: $mc;
     font-weight: bold;
     text-decoration: none;
-    background: #f2c318;
+    background: $sc;
     box-shadow: -7px 7px 4px 0px rgba(0, 0, 0, 0.4);
   }
 }
@@ -55,7 +55,3 @@
   background: #eeba1d;
   opacity: 1;
 }
-
-
-
-
