--- a/assets/templates/forex/sass/blocks/global.scss
+++ b/assets/templates/forex/sass/blocks/global.scss
@@ -25,9 +25,9 @@
     padding-left: 25px;
     padding-bottom: 70px;
     color: white;
-    list-style-image: url("../img/li.png");
     font-size: 18px;
     font-weight: bold;
+    list-style-image: url("../img/li.png");
     
     & li {
       margin-bottom: 10px;
@@ -39,7 +39,7 @@
     color: $mc;
     font-weight: bold;
     text-decoration: none;
-    background: #f2c318;
+    background: $sc;
     box-shadow: -7px 7px 4px 0px rgba(0, 0, 0, 0.4);
   }
 }
