--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -88,9 +88,9 @@
   </section>
   <section class="global">
     <div class="container">
-      <h2>Go Global</h2>
+      <h2 class="global__title">Go Global</h2>
       <p>Capital Markets & Investment Banking</p>
-      <ul>
+      <ul class="global__list">
         <li>Multiple strategies</li>
         <li>Corporate Banking & Risk Management</li>
         <li>Precious Metal Trading & Warehousing</li>
