--- a/assets/templates/forex/sass/blocks/global.scss
+++ b/assets/templates/forex/sass/blocks/global.scss
@@ -3,35 +3,11 @@
   background: url('../img/global.png') no-repeat;
   background-size: cover;
   
-  & h2 {
-    margin-bottom: 0;
-    padding-top: 140px;
-    color: white;
-    font-size: 70px;
-    font-weight: bold;
-    text-transform: uppercase;
-  }
-  
   & p {
     margin-top: 0;
     color: white;
     font-size: 25px;
     font-weight: bold;
-  }
-  
-  & ul {
-    margin-top: 50px;
-    margin-bottom: 0;
-    padding-left: 25px;
-    padding-bottom: 70px;
-    color: white;
-    font-size: 18px;
-    font-weight: bold;
-    list-style-image: url("../img/li.png");
-    
-    & li {
-      margin-bottom: 10px;
-    }
   }
   
   & a {
@@ -41,5 +17,29 @@
     text-decoration: none;
     background: $sc;
     box-shadow: -7px 7px 4px 0px rgba(0, 0, 0, 0.4);
+  }
+}
+
+.global__title {
+  margin-bottom: 0;
+  padding-top: 140px;
+  color: white;
+  font-size: 70px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.global__list {
+  margin-top: 50px;
+  margin-bottom: 0;
+  padding-left: 25px;
+  padding-bottom: 70px;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  list-style-image: url("../img/li.png");
+  
+  & li {
+    margin-bottom: 10px;
   }
 }
