--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -99,6 +99,39 @@
       <a href="#">START TRADING NOW</a>
     </div>
   </section>
+  <section class="trading">
+    <div class="container">
+      <h2 class="trading__title">YOUR PERSONAL MULTYPLATFORM TRADING VEHICLE</h2>
+    </div>
+  </section>
+  <section class="sign">
+    <p class="sign__title">Sign up NOW</p>
+    <p class="sign__text">and get expert<br>analytics BY OUR LOWYERS</p>
+    <input class="sign__input" type="email" placeholder="Enter your E-mail">
+  </section>
+  <section class="center">
+    <h2>AUTOMATIC TRADING CENTER</h2>
+  </section>
+  <section class="scroll">
+    <div class="scroll__first"></div>
+    <div class="scroll__text">
+      <div class="container">
+        <div class="scroll__flex">
+          <div class="scroll__box">
+            <b>intuitive INTERFACE</b>
+            <p>It`s, very intuitive and it informs you about all<br>the latest developments in the trading field.<br>Overall, the MT4 is the most popular and<br>widely used Forex trading platform</p>
+            <a href="#">Learn More</a>
+          </div>
+          <div class="scroll__box">
+            <b>Mt4</b>
+            <p>MT4 is a world-wide renowned application<br>which enables you to trade Forex,<br>Commodities and Futures. It is suitable for<br>beginner investors, but also for more experienced ones</p>
+            <a href="#">Learn More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="scroll__second"></div>
+  </section>
   <script src="js/jquery.min.js"></script>
   <script src="js/slick/slick.min.js"></script>
   <script src="js/script.js"></script>
