--- a/assets/templates/forex/sass/style.scss
+++ b/assets/templates/forex/sass/style.scss
@@ -7,3 +7,7 @@
 @import 'blocks/slider';
 @import 'blocks/online';
 @import 'blocks/global';
+@import 'blocks/trading';
+@import 'blocks/sign';
+@import 'blocks/center';
+@import 'blocks/scroll';
