--- a/assets/templates/forex/sass/blocks/scroll.scss
+++ b/assets/templates/forex/sass/blocks/scroll.scss
@@ -1,7 +1,7 @@
 .scroll__first {
   min-height: 470px;
   background: url("../img/scroll-1.png") no-repeat top;
-  background-size: contain;
+  background-size: cover;
   background-attachment: fixed;
 }
 
