--- a/assets/templates/forex/sass/blocks/trading.scss
+++ b/assets/templates/forex/sass/blocks/trading.scss
@@ -1,6 +1,6 @@
 .trading {
-  min-height: 750px;
-  background: url("../img/trading-bg.png") no-repeat center;
+  min-height: 550px;
+  background: url("../img/trading-bg.png") no-repeat bottom;
 }
 
 .trading__title {
