--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -7,6 +7,14 @@ body {
   width: 1055px;
   margin: auto; }
 
+@media screen and (max-width: 1200px) {
+  .container {
+    width: 90%; } }
+
+@media screen and (max-width: 768px) {
+  .container {
+    width: 320px; } }
+
 @font-face {
   font-family: 'SF UI Text';
   src: url("../fonts/SFUIText-HeavyItalic.eot");
@@ -143,6 +151,12 @@ body {
 .page-header__link--black {
   background: #1a1a1a; }
 
+@media screen and (max-width: 1200px) {
+  .page-header__item a {
+    font-size: 14px; }
+  .page-header__link {
+    padding: 10px 15px; } }
+
 .slider p {
   color: white;
   font-size: 30px;
@@ -158,7 +172,7 @@ body {
   box-shadow: -7px 7px 4px 0px rgba(0, 0, 0, 0.4); }
 
 .slider__slide {
-  height: 505px; }
+  height: 500px; }
 
 .slider__slide--one {
   background: url("../img/slider-1.png") no-repeat center;
@@ -189,6 +203,21 @@ body {
 .slick-dots li.slick-active button:before {
   background: #eeba1d;
   opacity: 1; }
+
+@media screen and (max-width: 1200px) {
+  .slider p {
+    font-size: 20px; }
+  .slider img {
+    width: 350px; }
+  .slider__slide {
+    height: 400px; }
+  .slick-dots li button:before {
+    width: 15px;
+    height: 15px; } }
+
+@media screen and (max-width: 768px) {
+  .container {
+    width: 320px; } }
 
 .online h2 {
   margin-top: 100px;
@@ -231,6 +260,10 @@ body {
 
 .online__box--zulu {
   background: url("../img/online-1.png") no-repeat top; }
+
+@media screen and (max-width: 768px) {
+  .container {
+    width: 320px; } }
 
 .global {
   min-height: 610px;
