--- a/assets/templates/forex/sass/global/base.scss
+++ b/assets/templates/forex/sass/global/base.scss
@@ -8,3 +8,19 @@ body {
   width: 1055px;
   margin: auto;
 }
+
+@media screen and ($tablet-widths) {
+  // .container {
+  //   width: 768px;
+  // }
+  
+  .container {
+    width: 90%;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .container {
+    width: 320px;
+  }
+}
