--- a/assets/templates/forex/sass/variables.scss
+++ b/assets/templates/forex/sass/variables.scss
@@ -1,2 +1,5 @@
 $mc: #2e2963;
 $sc: #f2c318;
+$mobile-widths: "max-width: 768px";
+$tablet-widths: "max-width: 1200px";
+$mobile-widths-only: "max-width: 767px";
