--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
   <header class="page-header">
-    <nav class="page-header__main-nav">
+    <nav class="page-header__main-nav  page-header__main-nav--closed  page-header__main-nav--nojs">
+      <button class="page-header__toggle" type="button">Открыть меню</button>
       <div class="container">
         <div class="page-header__flex">
           <ul class="page-header__menu">
