--- a/assets/templates/forex/sass/blocks/page-header.scss
+++ b/assets/templates/forex/sass/blocks/page-header.scss
@@ -48,8 +48,13 @@
   background: #1a1a1a;
 }
 
+.page-header__toggle {
+  display: none;
+}
+
 @media screen and ($tablet-widths) {  
   .page-header__item {
+        
     & a {
       font-size: 14px;
     }
@@ -58,8 +63,150 @@
   .page-header__link {
     padding: 10px 15px;
   }
+  
+  .page-header__link--violet {
+    margin-right: 5px;
+  }
 }
 
 @media screen and ($mobile-widths) {
-
+  .page-header__main-nav {
+    position: relative;
+  }
+  
+  .page-header__toggle {
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 55px;
+    height: 50px;
+    font-size: 0;
+    // background: white;
+    border: none;
+    cursor: pointer;
+    transition: 0.5s;
+    
+      &:hover {
+        background-color: $sc;
+      }
+      &:active {
+        background-color: $mc;
+      }
+  }
+  
+  .page-header__main-nav--closed {
+    .page-header__toggle {
+      &::before {
+        content: "";
+        position: absolute;
+        top: 15px;
+        left: 13px;
+        width: 30px;
+        height: 2px;
+        background-color: #fff;
+        box-shadow:
+          0 8px 00 #fff,
+          0 16px 00 #fff;
+        transition: background-color 0.3s;
+      }
+      
+      &:active::before {
+        background-color: rgba(255, 255, 255, 0.3);
+        box-shadow:
+          0 8px 00 rgba(255, 255, 255, 0.3),
+          0 16px 00 rgba(255, 255, 255, 0.3);
+      }
+    }
+  }
+  
+  .page-header__main-nav--opened {
+    .page-header__toggle {
+      left: 0;
+      right: auto;
+        &::before,
+        &::after {
+          content: "";
+          position: absolute;
+          top: 24px;
+          left: 18px;
+          width: 36px;
+          height: 2px;
+          background-color: #fff;
+          box-shadow: none;
+          transition: background-color 0.5s;
+        }
+        &::before {
+          transform: rotate(45deg);
+        }
+        &::after {
+          transform: rotate(-45deg);
+        }
+        &:active::before,
+        &:active::after {
+          background-color: rgba(255, 255, 255, 0.3);
+        }
+      }
+    }
+  
+  .page-header__main-nav--closed {
+    .page-header__item {
+      display: none;
+        &--active {
+          display: block;
+          text-align: center;
+        }
+    }
+    .page-header__user-menu {
+      display: none;
+    }
+  }
+  
+  .page-header__main-nav--opened {
+    .container {
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 70px;
+      z-index: 10;
+      height: 80vh;
+      background-color: #6a4d38;
+      animation: menu-opened 0.5s;
+        &::before {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          z-index: 2;
+          width: 7px;
+          height: 100%;
+          box-shadow: inset 4px 0 7px -2px rgba(0, 0 , 0, 0.3);
+        }
+    }
+  }
+  
+  .page-header__main-nav--nojs {
+    .page-header__toggle {
+      display: none;
+    }
+    .container {
+      position: static;
+      height: auto;
+    }
+    .page-header__item {
+      display: block;
+        &--active {
+          text-align: left;
+        }
+    }
+    .page-header__user-menu {
+      display: block;
+      background-color: #6a4d38;
+    }
+  }
+  
+  @keyframes menu-opened {
+    0% { transform: translateX(100%); }
+    100% { transform: translateX(0%); }
+  }
 }
