--- a/assets/templates/forex/sass/blocks/trading.scss
+++ b/assets/templates/forex/sass/blocks/trading.scss
@@ -11,3 +11,14 @@
   background: $mc;
   text-align: center;
 }
+
+@media screen and ($tablet-widths) {
+  .trading__title {
+    margin-top: 30px;
+    font-size: 20px;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  
+}
