--- a/assets/templates/forex/sass/blocks/global.scss
+++ b/assets/templates/forex/sass/blocks/global.scss
@@ -31,7 +31,6 @@
 
 .global__list {
   margin-top: 50px;
-  margin-bottom: 0;
   padding-left: 25px;
   padding-bottom: 70px;
   color: white;
@@ -57,19 +56,28 @@
 
 @media screen and ($mobile-widths) {
   .global {
-    min-height: 0px;
+    min-height: 600px;
     text-align: center;
+    background-size: cover; 
+    
+    & p {
+      font-size: 18px;
+    }
     
     & a {
       margin-top: 70px;
     }
   }
   
+  .global__title {
+    font-size: 50px;
+  }
+  
   .global__list {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 70px;
+    padding-bottom: 30px;
     text-align: left;
   }
 }
